# rag-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.agent/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.agent/agenticMetricSelection/: 01-overview.md  02-development.md
.agent/buildDataset/: buildDataset.md  development.md  progress.md
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  celery.py  config.py  dependencies.py  main.py
app/build_dataset/: README.md  __init__.py  config.py  graph.py  main.py  processors.py  schemas.py  storage.py  tools.py
app/config/: settings.py
app/routers/: __init__.py  evaluate.py  metrics.py  result.py
app/schemas/: metric.py  result.py
app/services/: metric_recommendation.py
app/tasks/: evaluation.py
tests/: test_build_dataset.py  test_evaluate.py  test_metrics.py  test_result.py
