[project]
name = "rag-eval"
version = "0.1.0"
description = "RAG evaluation API."
authors = [
    {name = "Ayat Aboalnaga",email = "ayat.aboalnaga@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "ragas>=0.2.15",
    "redis>=5.2.1",
    "uvicorn>=0.34.2",
    "httpx>=0.28.1", # Moved from dev
    "serpapi",
    "google-cloud-storage",
    "python-dotenv",
    "langchain",
    "langgraph",
    "pydantic-settings",
    "markitdown[pdf]",
]

[dependency-groups]
dev = [
    "nox>=2025.2.9",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
    # httpx>=0.28.1, # Moved to main dependencies
    "pytest-mock>=3.14.0",
]
