[project]
name = "rag-eval"
version = "0.1.0"
description = "RAG evaluation API."
authors = [
    {name = "Ayat Aboalnaga",email = "ayat.aboalnaga@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "ragas>=0.2.15",
    "redis>=5.2.1",
    "uvicorn>=0.34.2",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "nox>=2025.2.9",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
    "httpx>=0.28.1",
    "pytest-mock>=3.14.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
    "types-redis>=4.6.0.7" # Added for redis stubs
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "ARG", "C4", "DTZ", "EM", "ERA", "PD", "PGH", "PIE", "PL", "PT", "PTH", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY"]
ignore = ["EM101"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
plugins = "pydantic.mypy"
exclude = [
    "build/"
]
